modules/gdscript/tests/scripts/analyzer/errors/access_level_private_var_array_outside.gd
@private

class Foo:
    var ar: Array[int]

func test():
    var f = Foo.new()
    f.ar[0]
